HTML Format Drinks Data

--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         
-        <!-- <div class="sidenav">
+        <div class="sidenav">
             <img src="cozy-autumn-cafe-illustration_23-2149076539.jpg"></img>
-        </div> -->
+        </div>
 
         <!-- drinks.forEach(); -->
 
