Add HTML Delivery Status Page

--- a/checkout.html
+++ b/checkout.html
@@ -7,28 +7,29 @@
     <body>
         <h1>Please enter your payment details:</h1>
         <form>
-            <!-- First name -->
+            <!-- Names -->
             <label for="firstName">First Name:</label>
-            <br>
-            <input type="text" id="firstName" name="firstName">
-            <br>
-            <!-- Last name -->
             <label for="lastName">Last Name:</label>
             <br>
+            <input type="text" id="firstName" name="firstName">
             <input type="text" id="lastName" name="lastName">
             <br>
-            <!-- Delivery Address -->
+            <!-- Delivery Address and Payment -->
             <label for="text" id="address" name="address">Delivery Address:</label>
-            <br>
-            <input type="text" id="address" name="address">
-            <br>
-            <!-- Payment Details -->
             <label for="text" id="payment" name="payment">Payment Details:</label>
             <br>
-            <input type="text" value="ALREADY PAID! :D" disabled>
-            <!-- Submit button -->
+            <input type="text" id="address" name="address">
+            <input type="text" value="FREE DRINKS! :D" disabled>
             <br>
+            <p>Image by Vecteezy</p>
+            <img src="cute-and-funny-little-cat-cartoon-illustration-vector.jpg" height="100px" width="100px"></img>
+            <br>
+            <!-- Submit button -->
             <input type="submit" value="Submit">
+            <!-- <button>
+                <a href="deliveryStatus.html" button class="btn btn-green">Submit</a>
+            </button> -->
+
             <!-- Example URL after submission: -->
             <!-- checkout.html?firstName=Jane&lastName=Doe&address=New+York -->
 
