Install Nodejs and Requirejs
Install Nodejs and Requirejs to run Javascript files and later fix Dotenv setup.

--- a/checkout.html
+++ b/checkout.html
@@ -25,10 +25,13 @@
             <img src="cute-and-funny-little-cat-cartoon-illustration-vector.jpg" height="100px" width="100px"></img>
             <br>
             <!-- Submit button -->
-            <input type="submit" value="Submit">
-            <!-- <button>
+            <!-- <input type="submit" value="Submit">
+            <script>
+                checkInputFields(new URL(document.location.toString()).searchParams);
+            </script> -->
+            <button>
                 <a href="deliveryStatus.html" button class="btn btn-green">Submit</a>
-            </button> -->
+            </button>
 
             <!-- Example URL after submission: -->
             <!-- checkout.html?firstName=Jane&lastName=Doe&address=New+York -->
