--- a/deliveryStatus.html
+++ b/deliveryStatus.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <!-- Status true if all details in checkout form filled in. -->
-        <h1 id="status">Delivery Status!</h1>
-        <p>Image by Vecteezy</p>
-        <img src="cute-and-funny-little-cat-cartoon-illustration-vector.jpg" height="100px" width="100px"></img>
+        <h1 id="status">Drinks are on the way!</h1>
+        <h1>😁</h1>
+        <!-- <p>Image by Vecteezy</p>
+        <img src="cute-and-funny-little-cat-cartoon-illustration-vector.jpg" height="100px" width="100px"></img> -->
     </body>
 </html>
